@@ -3,8 +3,8 @@ package edu.nyu.mpgarate.dropsearch.crawl;
 import edu.nyu.mpgarate.dropsearch.document.Keyword;
 import org.junit.Test;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 
 import static junit.framework.TestCase.assertFalse;
@@ -15,9 +15,9 @@ import static org.junit.Assert.assertTrue;
  */
 public class ExtractorTest {
     @Test
-    public void testKeywords() throws MalformedURLException {
+    public void testKeywords() throws URISyntaxException {
         String body = "lorem ipsum dolor sit amet mailman mail man mail-man";
-        URL url = new URL("http://example.com");
+        URI url = new URI("http://example.com");
         Extractor e = Extractor.fromBody(body, url);
 
         List<Keyword> keywords = e.keywords();
@@ -33,12 +33,12 @@ public class ExtractorTest {
     }
 
     @Test
-    public void testKeywords_ignoresWhitespace() throws MalformedURLException {
+    public void testKeywords_ignoresWhitespace() throws URISyntaxException {
         String body = "<a href=\"http://www.kenrockwell.com/index" +
                 ".htm\">Home</a> &nbsp;&nbsp;&nbsp;";
 
 
-        URL url = new URL("http://example.com");
+        URI url = new URI("http://example.com");
         Extractor e = Extractor.fromBody(body, url);
 
         List<Keyword> keywords = e.keywords();
@@ -50,7 +50,7 @@ public class ExtractorTest {
     }
 
     @Test
-    public void testNextUrls() throws MalformedURLException {
+    public void testNextUrls() throws URISyntaxException {
         String body = "<html><body>"
                 + "<a href='http://example.com/subdir'>foo</a>"
                 + "<a href='http://example.com/image.jpg'>foo</a>"
@@ -60,16 +60,16 @@ public class ExtractorTest {
                 + "<a href='http://google.com'>foo</a>"
                 + "</body></html>";
 
-        URL startUrl = new URL("http://example.com");
+        URI startUrl = new URI("http://example.com");
         Extractor e = Extractor.fromBody(body, startUrl);
 
-        List<URL> nextUrls = e.nextUrls();
+        List<URI> nextUrls = e.nextUrls();
 
-        assertTrue(nextUrls.contains(new URL("http://example.com/subdir")));
-        assertTrue(nextUrls.contains(new URL("http://example.com/relative/subdir")));
-        assertFalse(nextUrls.contains(new URL("http://example.com")));
-        assertFalse(nextUrls.contains(new URL("http://example.com#samepageanchor")));
-        assertFalse(nextUrls.contains(new URL("http://google.com")));
-        assertFalse(nextUrls.contains(new URL("http://example.com/image.jpg")));
+        assertTrue(nextUrls.contains(new URI("http://example.com/subdir")));
+        assertTrue(nextUrls.contains(new URI("http://example.com/relative/subdir")));
+        assertFalse(nextUrls.contains(new URI("http://example.com")));
+        assertFalse(nextUrls.contains(new URI("http://example.com#samepageanchor")));
+        assertFalse(nextUrls.contains(new URI("http://google.com")));
+        assertFalse(nextUrls.contains(new URI("http://example.com/image.jpg")));
     }
 }
