@@ -2,8 +2,8 @@ package edu.nyu.mpgarate.dropsearch.document;
 
 import org.junit.Test;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Date;
 
 import static org.junit.Assert.assertTrue;
@@ -13,9 +13,9 @@ import static org.junit.Assert.assertTrue;
  */
 public class SearchQueryTest {
     @Test
-    public void searchQueryTest_construction() throws MalformedURLException {
-        URL url = new URL("http://example.com");
-        URL startUrl = new URL("http://example.com");
+    public void searchQueryTest_construction() throws URISyntaxException {
+        URI url = new URI("http://example.com");
+        URI startUrl = new URI("http://example.com");
         String body = "lorem ipsum dolor sit amet";
         WebPage webPage = new WebPage(url, body, new Date(), startUrl);
 
